<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/addStudent"
        android:icon="@drawable/ic_baseline_add"
        android:title="@string/menu_add_student"
        app:showAsAction="ifRoom"/>
</menu>