<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.students.StudentsActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/searchBtn"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <EditText
                android:id="@+id/searchStudent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_search_student"
                android:imeOptions="actionSearch"
                android:inputType="textNoSuggestions" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/tvStudentNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_student_name"
            android:textSize="19sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout" />


        <TextView
            android:id="@+id/tvStudentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="19sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/tvStudentNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/input_layout" />

        <TextView
            android:id="@+id/tvUserNotFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/tv_label_user_not_found"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/input_layout" />

        <TextView
            android:id="@+id/tvStudentUniversityLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_student_university"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStudentNameLabel" />

        <TextView
            android:id="@+id/tvStudentUniversity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:textStyle="italic|bold"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/tvStudentUniversityLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvStudentName" />

        <TextView
            android:id="@+id/tvBookListLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_student_book_list"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStudentUniversityLabel" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/listBooks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scrollbars="vertical"
            android:visibility="gone"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.968"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBookListLabel"
            tools:ignore="UnusedAttribute" />

        <!--<android.support.constraint.Group-->
        <!--android:id="@+id/groupUserInfo"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:visibility="gone"-->
        <!--app:constraint_referenced_ids="tvStudentNameLabel, tvStudentName,-->
        <!--tvStudentUniversityLabel, tvStudentUniversity, tvBookListLabel" />-->

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnAddBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_baseline_add"
            android:visibility="gone"
            app:elevation="6dp"
            app:layout_anchor="@id/listBooks"
            app:layout_anchorGravity="bottom|right|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:pressedTranslationZ="12dp" />

    </android.support.constraint.ConstraintLayout>
</layout>